WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153104
imported/blink/editing/text-iterator/read-past-cloned-first-letter.html crashes
https://bugs.webkit.org/show_bug.cgi?id=153104
Summary
imported/blink/editing/text-iterator/read-past-cloned-first-letter.html crashes
Beth Dakin
Reported
2016-01-14 13:18:20 PST
It is possible to make imported/blink/editing/text-iterator/read-past-cloned-first-letter.html crash by invoked wordRangeFromPosition() on the final document.
Attachments
Patch
(1.75 KB, patch)
2016-01-14 13:22 PST
,
Beth Dakin
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2016-01-14 13:22:26 PST
Created
attachment 268995
[details]
Patch
Beth Dakin
Comment 2
2016-01-14 13:32:39 PST
Thanks Simon!
http://trac.webkit.org/changeset/195072
I am investigating if there is a way to add a new test that would have crashed before this change.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug