imported/blink/editing/text-iterator/read-past-cloned-first-letter.html crashes https://bugs.webkit.org/show_bug.cgi?id=153104 -and corresponding- rdar://problem/24155631

Reviewed by Simon Fraser.

Though we merged the Blink test, we never merged Blink patch that fixed this
bug. So this is a merge of https://github.com/ChromiumWebApps/blink/commit/5a0d23d4368c661f621364339fde66b41ef019e5
* editing/TextIterator.cpp:
(WebCore::SimplifiedBackwardsTextIterator::handleFirstLetter):



Canonical link: https://commits.webkit.org/171195@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195072 268f45cc-cd09-0410-ab3c-d52691b4dbfc